<resources>
    <string name="app_name">Stopwatch</string>
    <string name="default_hours">00</string>
    <string name="default_minutes">00</string>
    <string name="hour_minute_separator"> : </string>
    <string name="minute_second_separator"> : </string>
    <string name="default_seconds">00</string>
    <string name="second_millisecond_separator"> . </string>
    <string name="default_centi_seconds">00</string>
    <string name="support_button_default_text">Lap</string>
    <string name="main_button_default_text">Start</string>
    <string name="main_button_ticking_text">Stop</string>
    <string name="support_button_paused_text">Reset</string>
    <string name="main_button_paused_text">Resume</string>
</resources>