<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp">
        <ImageButton
            android:id="@+id/copy_laps_data_button"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_content_copy_24"
            android:contentDescription="Copies lap values to the clipboard."
            android:tooltipText="Copy"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="false"
            android:focusable="false"
            android:scaleType="centerInside"
            android:paddingHorizontal="10.5dp"
            android:paddingVertical="20dp"
            android:layoutDirection="rtl"
            app:tint="?attr/SWColorOnSurface"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ticker_text_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="205dp">
        <LinearLayout
            android:id="@+id/main_ticker_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/hours"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_minutes"
                android:textColor="?attr/SWColorOnBackground"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/hours_minutes_separator"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="fill_vertical"
                android:text="@string/hour_minute_separator"
                android:textColor="?attr/SWColorOnBackground"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_minutes"
                android:textColor="?attr/SWColorOnBackground"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/minutes_seconds_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="fill_vertical"
                android:text="@string/minute_second_separator"
                android:textColor="?attr/SWColorOnBackground"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_seconds"
                android:textColor="?attr/SWColorOnBackground"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/seconds_centi_seconds_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/second_millisecond_separator"
                android:textColor="?attr/SWColorOnBackground"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/centi_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="0dp"
                android:text="@string/default_centi_seconds"
                android:textColor="?attr/SWColorOnBackground"
                android:textSize="55sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lap_ticker_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_ticker_text">

            <TextView
                android:id="@+id/lap_hours"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_hours"
                android:textColor="?attr/SWColorOnBackgroundMutedMin"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lap_hours_minutes_separator"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="fill_vertical"
                android:text="@string/hour_minute_separator"
                android:textColor="?attr/SWColorOnBackgroundMuted"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lap_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_minutes"
                android:textColor="?attr/SWColorOnBackgroundMutedMin"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lap_minutes_seconds_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="fill_vertical"
                android:text="@string/minute_second_separator"
                android:textColor="?attr/SWColorOnBackgroundMuted"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lap_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_seconds"
                android:textColor="?attr/SWColorOnBackgroundMutedMin"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lap_seconds_centi_seconds_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/second_millisecond_separator"
                android:textColor="?attr/SWColorOnBackgroundMuted"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lap_centi_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_centi_seconds"
                android:textColor="?attr/SWColorOnBackgroundMutedMin"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lap_table_container"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticker_text_container"
        app:layout_constraintBottom_toTopOf="@+id/controls_container"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:id="@+id/lap_table_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/lap_table_id_header"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="Lap"
                android:textStyle="bold"
                android:textColor="?attr/SWColorOnBackgroundMuted"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lap_table_lap_times_header"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@id/lap_table_id_header"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="Lap times"
                android:textStyle="bold"
                android:textColor="?attr/SWColorOnBackgroundMuted"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lap_table_overall_time_header"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@id/lap_table_lap_times_header"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="Overall time"
                android:textStyle="bold"
                android:textColor="?attr/SWColorOnBackgroundMuted"
                android:textSize="14sp" />
        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/lap_table_content_header_divider"
            android:layout_width="wrap_content"
            android:layout_height="0.9dp"
            android:layout_marginTop="15dp"
            app:dividerColor="?attr/SWColorOnBackgroundMutedMin"
            app:layout_constraintTop_toBottomOf="@id/lap_table_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lap_table"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/lap_table_content_header_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/controls_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="86dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/support_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:backgroundTint="?attr/SWColorSurface"
            android:enabled="false"
            android:minHeight="56dip"
            android:paddingHorizontal="16dp"
            android:paddingVertical="1dp"
            android:text="@string/support_button_default_text"
            android:textColor="?attr/SWColorOnSurface"
            android:textSize="17sp" />

        <Button
            android:id="@+id/main_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:backgroundTint="?attr/SWColorPrimary"
            android:minHeight="56dip"
            android:paddingHorizontal="16dp"
            android:paddingVertical="1dp"
            android:text="@string/main_button_default_text"
            android:textColor="?attr/SWColorOnPrimary"
            android:textSize="17sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>